Fix: Resolve NPM registry resolution issue by removing package-lock.json

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# Solve env-specific NPM registry problem
+# (Pushing up package-lock.json file was causing Render
+# to try installing dependencies from Nexus-resolved URLs
+# (https://nexus.corp.indeed.com/) rather than the public
+# NPM registry, leading to build failures due to lack of permissions)
+# Fix: let Render install its own dependencies afresh
+package-lock.json
